# wasabi2

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
docker/: Dockerfile  Makefile  requirements.txt
examples/: CMakeLists.txt  cmu.cpp  symphony.cpp
include/dataset/: survey.h
include/feature/: scd.h  sift.h
include/util/: cst.h  edge.h  io.h  semantic.h  types.h
meta/: palette_cityscapes.txt
meta/cmu/: get_surveys.sh
meta/cmu/bgr/: data_links.txt  get_data.sh
meta/cmu/seg/: data_links.txt  get_data.sh
meta/codebooks/: get_data.sh
meta/symphony/: get_data.sh
pywasabi2/: cst.py  edge_proc.py  local_feature.py  plots_cmu.py  plots_symphony.py  retrieval.py  retrieve.py  semantic_proc.py  survey.py  tab2latex.py  tools_agg.py
scripts/: cmu_park.txt  cmu_park_22.txt  cmu_urban.txt  extract_features.sh  wasabi2.sh
src/: CMakeLists.txt
src/dataset/: survey.cpp
src/feature/: scd.cpp  sift.cpp
src/util/: edge.cpp  io.cpp  semantic.cpp
